MultiSite (bugfix): Account verification  - Removed the baseUrl value from ajax call in AccountActivation.js  - Added min-height to account activation bar for avoiding white space.
git-svn-id: http://svn.contrexxlabs.com/contrexx/trunk@33381 5ce06e5d-2b28-0410-aa6a-b3cd9cf52d8a

--- a/core_modules/MultiSite/View/Style/AccountActivationFrontend.css
+++ b/core_modules/MultiSite/View/Style/AccountActivationFrontend.css
@@ -10,6 +10,7 @@
     color: #a94442;
     background-color: #f2dede;
     border-color: #ebccd1;
+    min-height: 25px;
 }
 
 #MultiSiteAccountActivation .highlight {
